--- a/_config.yml
+++ b/_config.yml
@@ -7,12 +7,12 @@ baseurl: '/jekyll-uno/'
 # disqus_shortname: 'your-disqus-name'
 
 author:
-  name: 'Josh Gerdes'
-  email: josh@joshgerdes.com
-  twitter_username: joshgerdes
-  facebook_username: joshgerdes
-  github_username:  joshgerdes
-  linkedin_username:  joshgerdes
+  name: 'Ernesto Ramirez'
+  email: er.ramirez@gmai.com
+  twitter_username: eramirez
+  facebook_username: 
+  github_username:  errammirez
+  linkedin_username:  ernestoramirez
 
 defaults:
   -
